*Empty MediaWiki Message*

--- a/Karl_Sauvagerd.mw
+++ b/Karl_Sauvagerd.mw
@@ -15,7 +15,7 @@ Uut ''Heergods Natuur'', ummezet in de [[West-Oaveriesselse spelling]]
 
 In 1948 verscheen van hum ''Häideblomen : Gedichten en Geschichten ut de Groafschup Bentheim'', 'Met Noawoord en Woordliste van [[Arnold Rakers]]'.
 
-Partie gedichten van Sauvagerd stunden in de jaoren vieftig in 't in [[Grunnen (provìnzie)|Grunning]] uutegèven literaire tiedschrift ''[['t Swieniegeltje]]''. Hi'j schreef ok in tiedschriften as ''[[Moderspråke en Nåberschůp]]'' en ''Der Grafschafter''. Veur dit leste blad schreef hi'j van 1968 töt 1974 de riege ''Unser Grafschafter Platt''. Sauvagerd is vertègenwoordigd in de bundel ''Heimatdichtung der Grafschaft Bentheim'' (1973), onder redactie van W. Buddenberg en H. Heddendorp.
+Partie gedichten van Sauvagerd stunden in de jaoren vieftig in 't in [[Grunnen (provìnzie)|Grunning]] uutegèven literaire tiedschrift ''[['t Swieniegeltje]]''. Hi'j schreef ok in tiedschriften as ''[[Moderspråke en Nåberschůp]]'' en ''Der Grafschafter''. Veur dit leste blad schreef hi'j van 1968 töt 1974 de riege ''Unser Grafschafter Platt''. Sauvagerd is vertègenwoordigd in de bundel ''Heimatdichtung der Grafschaft Bentheim'' (1973), onder redactie van Wilhelm Buddenberg en Hermann Heddendorp.
 
 ==Anhaling==
 :''Dåår lig
@@ -39,6 +39,7 @@ Uut Sauvagerd zien gedicht ''Meteoor'' (in '' 't Swieniegeltje'', darde jaorgaan
 ==Warken==
 *''Häideblomen'' (mit [[Arnold Rakers]]), [[Patterbuorn]]: Schöningh, 1948
 *''De tied bliff Baas'', [[Nothoorn]]: Pötter, 1955
+* „De Tied blif Baas“ – Ausgewählte Texte und ein Lebensbild. Hrsg. im Auftrag der Heimatfreunde Neuenhaus e.V. von Berend Vette und Klaus Vorrink, Haselünne 2019.
 
 ==Uutgaonde verwiezing==
 *[http://www.gbiu.de/metmekaar/platt.htm Twei van Sauvagerd zien gedichten op ''metmekaar'' (gedichten en vertellegies in 't Graafschopper Platt)]
