--- a/Vosbergenschriefwiese.mw
+++ b/Vosbergenschriefwiese.mw
@@ -65,6 +65,11 @@ Ofbeelding:Vosb4.jpg
 Ofbeelding:Vosb5.jpg
 </gallery>
 
+== Bronnen ==
+<nowiki>*</nowiki> Helmut Lensing, Die Niederdeutsch-Bewegung nach 1945 in den Regionen Grafschaft Bentheim, Emsland und Ost-Niederlande, in: Osnabrücker Mitteilungen. Mitteilungen des Vereins für Geschichte und Landeskunde von Osnabrück (Historischer Verein), Bd. 125, Osnabrücker 2020, S. 91-116.
+
+* H.T.J. Miedema, Het Nedersaksisch symposion (1955), in: <nowiki>http://www.twentsetaalbank.nl/docs/DmB_1955_078-Het_Nedersaksisch_symposion-MiedemaHTJ.pdf</nowiki> 
+
 {{Dialekt|wvel|Nunspeet|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Nedersaksiese spellingsrichliene]]
