--- a/Karl_Sauvagerd.mw
+++ b/Karl_Sauvagerd.mw
@@ -45,7 +45,7 @@ Uut Sauvagerd zien gedicht ''Meteoor'' (in '' 't Swieniegeltje'', darde jaorgaan
 
 * Helmut Lensing, Art. Sauvagerd, Karl, in: Studiengesellschaft für Emsländische Regionalgeschichte (Hrsg.), Emsländische Geschichte, Bd. 24, Haselünne 2017, S. 244-300.
 
-* Helmut Lensing, Die Niederdeutsch-Bewegung nach 1945 in den Regionen Grafschaft Bentheim, Emsland und Ost-Niederlande, in: Osnabrücker Mitteilungen. Mitteilungen des Vereins für Geschichte und Landeskunde von Osnabrück (Historischer Verein), Bd. 125, Osnabrücker 2020, S. 91-116.
+* Helmut Lensing, Die Niederdeutsch-Bewegung nach 1945 in den Regionen Grafschaft Bentheim, Emsland und Ost-Niederlande, in: Osnabrücker Mitteilungen. Mitteilungen des Vereins für Geschichte und Landeskunde von Osnabrück (Historischer Verein), Bd. 125, Osnabrück 2020, S. 91-116.
 
 ==Uutgaonde verwiezing==
 *[http://www.gbiu.de/metmekaar/platt.htm Twei van Sauvagerd zien gedichten op ''metmekaar'' (gedichten en vertellegies in 't Graafschopper Platt)]
