/* Bekeande leu oet t Vjenne */

--- a/T_Vjenne.mw
+++ b/T_Vjenne.mw
@@ -21,7 +21,7 @@ Disse maneere van proatn wördt hoaste neet mear broekt, en t gebroek van dialek
 *[[Johan Kenkhuis]] (7 mei 1980), zwemmer
 *[[Manon Fokke]] (16 januari 1976), sund 20 september 2012 lid van n [[Tweeden Kamer]] veur de [[PvdA]]
 *Leon Schipper, de zingende fietsenmaker
-
+*Wouter van Dijk, donderse dorpsgek 
 {{Tweanteraand}}
 
 [[Kategorie:Tweants artikel]]
