/* Samenstelling */ Corr: Mauritaniërs --> Mauritianen

--- a/Mauritius_(land).mw
+++ b/Mauritius_(land).mw
@@ -51,7 +51,7 @@ Mauritius is bestuurlik verdeeld in distrikten, aofhankelike gebiejen en de regi
 De offisiële taal is t [[Engels]], mer t van t [[Frans]] aofeleien [[Mauritius Kreools]] wörden deur t merendeel van de bevolking espreuken. t Frans domineert de media.
 
 === Samenstelling ===
-De inwoeners stammen veur 68% aof van Veurindiërs (tradisioneel de arbeiders op de sukerplantazies); ze neumen ze daor Indo-Mauritaniërs. 27% van de inwoeners is [[Kreool (Suriname)|Kreool]]. Oek hef Mauritius 2% Frans-Mauritaniërs (naokoemelingen van de Fransen) en 3% Sino-Mauritaniërs.
+De inwoeners stammen veur 68% aof van Veurindiërs (tradisioneel de arbeiders op de sukerplantazies); ze neumen ze daor Indo-Mauritianen. 27% van de inwoeners is [[Kreool (Suriname)|Kreool]]. Oek hef Mauritius 2% Frans-Mauritianen (naokoemelingen van de Fransen) en 3% Sino-Mauritianen.
 
 === Godsdienst ===
 * [[hindoeïsme]] zo'n 52%, [[christendom]] (veurnamelik [[Rooms-Katholieke Karke|rooms-katholiek]]) zo'n 30% en [[islam]] zo'n 17%.
