/* Tääl van Zwollerkärspel */

--- a/Zwollerkärspel.mw
+++ b/Zwollerkärspel.mw
@@ -59,10 +59,10 @@ In [[1956]] gung 35 hectare grond waor gieniene woonden naor de gemiente [[Assel
 In Zwollerkärspel wier er [[Sallaands]] espröäken. Verschillen in het Sallaands dät in Zwollerkärspel espröäken wier waren er oaverdudelik, määr de verschillen waren niet slim groot.                        
 
 
-In et oosten van Zwollerkärspel kwamen körte klinkers veur in o.a de woorden sprekken, etten, leppel, etc. Meer naor et westen juust de erekte: spreaken, eaten en leapel. In Kampen wördt de lange klinkers gebruukt in een antal van disse woorden: lepel en eten. Ondudelik is wat de situasie in et westen van Zwollerkärspel was. Deur het midden van de gemiente leup de [[Eenheidsmearvoold|ienheids-pluralislien]]. Ten westen wier onder aandere wi'j werken ezegt, ten oosten wi'j werkt. De stad Zwolle lag op de lien. De ienige uutzundering ier was et wärkwoord wean. In Zwolle wier niet wi'j binnen ezegd määr wi'j bint<ref><nowiki>http://www.detaalvanoverijssel.nl/plaats/id:19</nowiki> Over de taal van Zwolle. Geraadpleegd op 5 juni 2020.</ref>. Ondudelik is hier wier wat de situasie in Zwollerkärspel was rund de liende.            
+In et oosten van Zwollerkärspel kwamen körte klinkers veur in o.a de woorden sprekken, etten, leppel, etc. Meer naor et westen juust de erekte: spreaken, eaten en leapel. In Kampen wördt de lange klinkers gebruukt in een antal van disse woorden: lepel en eten. Ondudelik is wat de situasie in et westen van Zwollerkärspel was. Deur het midden van de gemiente leup de [[Eenheidsmearvoold|ienheids-pluralislien]]. Ten westen wier onder aandere wi'j wärken ezegt, ten oosten wi'j wärkt. De stad Zwolle lig op de liende. De ienige uutzundering hier was et wärkwoord wean. In Zwolle wier niet wi'j binnen ezegd määr wi'j bint<ref><nowiki>http://www.detaalvanoverijssel.nl/plaats/id:19</nowiki> Over de taal van Zwolle. Geraadpleegd op 5 juni 2020.</ref>. Ondudelik is hier wier wat de situasie in Zwollerkärspel was rund de liende.            
 
 
-In een bulte woorden als bien, stien, iene, twieë, wier in het gebied van Zwollerkärspel  ie gebruukt. De greanze tussen waoras de ee en ie gebruukt wieren lag zo tussen de stad Zwolle en het zuden van de gemiente Zwollerkärspel. Bien vörmt hier een uutzondering, in Westenholte wier hier been ezegd.<ref>Meertens Instituut Kaartenbank.</ref> 
+In een bulte woorden als bien, stien, iene, twieë, wier in het gebied van Zwollerkärspel  ie gebruukt. De greanze tussen waoras de ee en ie gebruukt wieren lag zo tussen de stad Zwolle en het zuden van de gemiente Zwollerkärspel. Bien vörmt hier een uutzundering, in Westenholte wier hier been ezegd.<ref>Meertens Instituut Kaartenbank.</ref> 
 
 == Antal inwoners  ==
 *[[31 mei]] [[1947]]<ref> Volkstelling 1947, http://www.volkstellingen.nl/nl/volkstelling/imageview/VT1947B1T/index.html</ref>: 9.437
@@ -74,7 +74,7 @@ Totale bevolking, antal huzen en geleuf<ref>Volkstellingen Nederlaand 1840-1960.
 !Totale bevolking
 !Gruui bevolking
 !Antal huzen
-!Protestaanten
+!Protestanten
 !Katholieken
 !Israeliten
 !Andere kärkgroepe
