--- a/Herman_Finkers.mw
+++ b/Herman_Finkers.mw
@@ -3,7 +3,7 @@
 
 Seend at hee in 2002 te heurn kreag dat e leukemie hef, hef e nen bestn zet genne vuurstellingn meer gevn. Vanof oktober 2007 steet e wier op de plaankn.
 
-Finkers is de leste joarn slim drok veur 't [[Twents]]. In zin leste kabaretveurstelling wisseln hee Hollaands al of met Plat, mer maakten zik ok drok veur ne anpassing van de skriefwieze van 'n Kreenk veur de Twentse Sproake. In [[2015]] haalden hee ne regionaaln hit met zien [[Karnaval|Karnavalsnommer]] "Koo wit de Floo", wat geet oawer zinne geboortestea. Finkers wont rechtevoort in [[Böaningn]].
+Finkers is de leste joarn slim drok veur 't [[Tweants|Twents]]. In zin leste kabaretveurstelling wisseln hee Hollaands al of met Plat, mer maakten zik ok drok veur ne anpassing van de skriefwieze van 'n Kreenk veur de Twentse Sproake. In [[2015]] haalden hee ne regionaaln hit met zien [[Karnaval|Karnavalsnommer]] "Koo wit de Floo", wat geet oawer zinne geboortestea. Finkers wont rechtevoort in [[Böaningn]].
 
 ==Leavnsloop==
 Finkers is nog wa rooms optrökn en ook vandaag-an-n-dag döt e völ vuur zien [[religie|geloof]]. Hee was misndener in de St. Egbertusparochie in Almelo. Hee gung der recht van op n eande dat e alle roomse Latienske weurde kenn. Vuur ziene trouwerieje komponeern e ne traditionele Latienske muziekmisse, de Seent Jorismisse.
