/* Aandere aktiviteitn */  > Meyning. dårby solde dat heylemål neet bysünder mütten weasen.

--- a/Herman_Finkers.mw
+++ b/Herman_Finkers.mw
@@ -30,7 +30,7 @@ Op [[2 oktober]] [[2005]] kwam de (vuur n groot deel) in t Tweants sprökn soapr
 
 Veur de tentoonstellings in t museum van [[TwentseWelle]] hef Finkers de Tweantse rondleidingstekste insprökn.
 
-Vöär 2020 is der nen komiesn spölfilm van em op de rolle: "De Beentjes van St. Hildegard." Finkers hef 't scenario schrevn. Et verhaal is baseerd op nen Tsjechischen film: 'Teorie Tygra'. Hierveur kreeg he ne Gouden Kalf Nominatie, wat biejzunder is veur nen film den zo good as himmoal in't Plat is. Heezölf dut de heuvdrol spöln, med [[Johanna van Buuren]] as teagenspölster.
+Vöär 2020 is der nen komiesn spölfilm van em op de rolle: "De Beentjes van St. Hildegard." Finkers hef 't scenario schrevn. Et verhaal is baseerd op nen Tsjechischen film: 'Teorie Tygra'. Hierveur kreeg he ne Gouden Kalf Nominatie. Heezölf dut de heuvdrol spöln, med [[Johanna van Buuren]] as teagenspölster.
 
 ==Priezen==
 In 2011 kreeg Finkers de [[Groenman-taalpries]] van [[Onze Taal]].
