--- a/Bob_Marley.mw
+++ b/Bob_Marley.mw
@@ -29,11 +29,12 @@ Marley was streng [[Rooms-Katholieke Karke|Rooms-Katholiek]] op evoedt. Mer gedo
 
 The Wailers kreegn verskel met Dodd oawer de seantn. Doarumme gungn ze wieter met geluudsman [[Lee "Scratch" Perry]] en zienen studioband The Upsetters. Disse samenwaarking doern nog gen joar, mer toch meant völle lue at in den tied t beste van The Wailers op enömn wör. Doarnoa kreegn Marley en Perry ook verskel oawer de rechtn van de opnames en gung oet mekaar, mer bleewn wal gode bekeandn van mekaar en waarken ook nog wal mangs saamn.
 
-Tusken [[1968]] en [[1972]] nömn Bob en Rita, Peter Tosh en Bunny Wailer n antal oolde nommers vanniejs op bie JAD Records in Kingston en [[Londen]] um t geluud van The Wailers wat better verkoopbaar te maakn. Bunny veund at disse nommers nooit op n album oet ebracht mosn wordn, mer as demo's vuur plaatnmoatskoppiejn zoln deenn. [[1968]] gungn Bob en Rita hen kuiern bie leedskriewer Jimmy Norman in [[Niej-York (stad)|Niej-Jork]]. Den har de tekste skreewn vuur [[Kai Winding]] zien "Time is on My Side" (wat later oawernömn wör duur de [[Rolling Stones]]) en ook vuur [[Johnny Nash]] en [[Jimi Hendrix]]. Hier maakn  Marley in drei daagn tied ne opname van 24 minuutn, woerin't te heurn is dat hei probeern t reggaegeluud wat mear op de Amerikaanse maarkt of te stemn. Marley woonn in Ridgmount Gardens in [[Bloomsbury]], Londen in [[1972]].
+Tusken [[1968]] en [[1972]] nömn Bob en Rita, Peter Tosh en Bunny Wailer n antal oolde nommers vanniejs op bie JAD Records in Kingston en [[Londen]] um t geluud van The Wailers wat better verkoopbaar te maakn. Bunny veund at disse nommers nooit op n album oet ebracht mosn wordn, mer as demo's vuur plaatnmoatskoppiejn zoln deenn. [[1968]] gungn Bob en Rita hen kuiern bie leedskriewer Jimmy Norman in [[Niej-York (stad)|Niej-Jork]]. Den har de tekste skreewn vuur [[Kai Winding]] zien "Time is on My Side" (wat later oawernömn wör duur [[The Rolling Stones]]) en ook vuur [[Johnny Nash]] en [[Jimi Hendrix]]. Hier maakn  Marley in drei daagn tied ne opname van 24 minuutn, woerin't te heurn is dat hei probeern t reggaegeluud wat mear op de Amerikaanse maarkt of te stemn. Marley woonn in Ridgmount Gardens in [[Bloomsbury]], Londen in [[1972]].
 
 In [[1973]] wör ear album "Catch a Fire" in de hele wearld good oontvöngn. Zien hit "I Shot the Serrif" wör zölfs heroetegiewn duur [[Eric Clapton]]. Hej wör onmeundig bekeand in zowat de hele wearld, mear vuural in [[Afrika]].
 
 Noa nen zet toern met ear drein, besleutn Bunny Livingston en Peter McIntosh vuur zikzelf te beginn. Det was t eande van ''The Wailers''. Ook zee kreegn ne grote groep anhangers, mer ze haaldn t nooit bie Bob Marley's sukses. Den breuk internasjonaal as soloartiest duur met zin album ''Exodus''.
+
 == Wietere leawn ==
 In [[1977]] wör Bob op enömn in t [[zeeknhoes]]. Dr wör ne staarke vorm van [[kaanker]] in zienen grootn tei eveundn. Dat was vuurt ekömn oet n weundjen wat hei bie n [[voetbal]] har ekreegn. Hei wol zik n tei neet loatn ofsniedn, umdat zien geleuf dat neet tau leut. n Kaanker zeaidn toew oet noar ziene [[harsens]], [[longen|longn]], [[leaver|leawer]] en ziene [[maag]]e. Tiedns zienen lesten wearldtoer, toew at he in [[Verienigde Staoten van Amerika|Amerika]] was, stortn he in toew at he n stuksken gung hardloopn. n Toer wör geliek of ebloazn.
 
