--- a/Kazakstan.mw
+++ b/Kazakstan.mw
@@ -1,7 +1,7 @@
 {{Laandtabel-twd
 | naaminlaandssproak = Қазақстан Республикасы<br /><small>Qazaqstan Respublïkası</small>
 | vlagge = Flag of Kazakhstan.svg
-| woapn = Coat of arms of Kazakhstan.svg
+| woapn = Emblem of Kazakhstan latin.svg
 | breedtegroad = 48///N | lengtegroad = 68///E | region=KZ
 | lokasie = Kazakhstan (orthographic projection).svg
 | sproaken = [[Russies]], [[Kazachs]]
@@ -15,7 +15,7 @@
 | volksleed = ''[[Meniñ Qazaqstanım]]''
 | tld = kz | laandkode = KAZ | tel = 7
 }}
-'''Kazakstan''' (in t [[Kazaks]]: Қазақстан, ''Qazaqstan''; [[Russies]]: Казахстан, ''Kazachstan''; [[Turks]]: ''Kazakistan''), offisjeel de '''Reppubliek Kazakstan''', is n laand in [[Azië]] en [[Europa (wearlddeel)|Europa]] wat greanzt an [[Ruslaand]], [[Volksreppubliek Sjina|Sjina]], [[Kirgizië]], [[Oezbekistan]], [[Turkmenistan]] en de [[Kaspiese Zee]]. Als van Kazakstan op t westn van de [[Oeral (rivier)|Oeral]] heurt bie Europa, alns op t oostn bie Azië. 
+'''Kazakstan''' (in t [[Kazaks]]: Қазақстан, ''Qazaqstan''; [[Russies]]: Казахстан, ''Kazachstan''; [[Turks]]: ''Kazakistan''), offisjeel de '''Reppubliek Kazakstan''', is n laand in [[Azië]] en [[Europa (wearlddeel)|Europa]] wat greanzt an [[Ruslaand]], [[Volksreppubliek Sjina|Sjina]], [[Kirgizië]], [[Oezbekistan]], [[Turkmenistan]] en de [[Kaspiese Zee]]. Als van Kazakstan op t westn van de [[Oeral (rivier)|Oeral]] heurt bie Europa, alns op t oostn bie Azië.
 
 == Geskiedenisse == 
 De [[Kazakn]] warn n [[Islam]]ities [[nomaadn]]volk met Turkse wörtel, wat in t [[18e eeuw|18e joarhoonderd]] duur [[Ruslaand]] oonderwörpn wör. Noa de [[Russiese Revolusie (1917)|Russiese Revolusie]] wör vuur öar in [[1920]] de [[Kirgiziese ASSR (1920-1925)|Kirgiziese ASSR]] binn de Russiese Federasie opricht, wat in 1925 wör ummedeupt tot Kazakse ASSR en woervan't in 1926 de Kirgiziese ASSR wier ofsplitsn (wat rechtevoort de reppubliek Kirgizië is). t Groondgebeed wör ook in t westn kleainder maakt; de stad [[Orenburg]], wat töt dee tied de heuwdstad was van de op zikzelf stoande Sovjetstoat, köm oonder behear van de Russiese Federasie en [[Alma-Ata]] wör de nieje heuwdstad. [[1936]] wör Kazakstan ne volweardige boondsreppubliek binn de [[Sovjet-Unie]].
