--- a/Jan_Rozendom.mw
+++ b/Jan_Rozendom.mw
@@ -1,13 +1,56 @@
-'''Jan Rozendom''' in [[Riessen]] bekeand as '''Jan van de Waander''' ([[1921]] - ), was nen [[Tweante|Tweantsen]] dichter, den't vake met zinne gedichtn in t Riessens Niejsblad steund. Hee skreef in t [[Riessens]], met vake nen stichteliken inhoold.
+'''Jan Rozendom''' in [[Riessen]] bekeand as '''Jan van de Waander''' ([[1921]] - ), was nen [[Tweante|Tweantsen]] dichter, den't vake met zinne gedichtn in et domoalige Riessens Niejsblad steund. Hee skreef in t [[Riessens]], met vake nen stichteliken inhoold.
 
-Rozendom was nen [[gerefformeerd]]en. Hee skreef doarumme ook oawer eenvoold, te völle egenzinnigheaid, ondaankberheaid, wat blik oet gedichten as "A'j hoge stoat, kö'j lege valn", "''Viej weett t zo good''" en "''Staank vuur daank''".
+Rozendom was nen [[gerefformeerd]]en. Hee skreef doarumme ook oawer eenvoold, te völle egenzinnigheaid, ondaankberheaid, wat blik oet gedichten as "A'j hoge stoat, kö'j lege valn", "''Viej weett t zo good''" en "''Staank vuur daank''". Doarnöast har he körte verhaalkes op riem.
 
-Hee skreef met [[Koarel van n Notoaris|Koarel]] zinne skriefwieze. In 1971 köm zinnen gedichtenbeundel ''Rozeknùpkes'' (Rozeknöpkes) oet.
+Rozendom har geveul vuur ritme. De meeste van ziene gedichten hebt een strak metrum van veer um dree jamben de regel. Hee skreef met [[Koarel van n Notoaris|Koarel]] zinne skriefwieze, al har hee den neet helemoal good oonder 't knee: In 1971 köm zinnen gedichtenbeundel ''Roozeknúpkes'' (Rozeknöpkes) oet, met et streepken op de ú de verkeerde kaante op.
 
-Doarbiej was'e nog vuurzitter van t Riessens Männenkoor en de Oold Strieders '40-'45 en deed'e vanoet de [[Protestantisme|Hervörmde Koarke]] völle vuur de gemeenskop in Riessen en [[Ealsn|Ealsen]].
+Doarbiej was'e nog vuurzitter van t Riessens Männenkoor en de Oold Strieders '40-'45 en deed hee vanoet de [[Protestantisme|Hervörmde Koarke]] völle vuur de gemeenskop in Riessen en [[Ealsn|Ealsen]].
+
+==Fragment==
+===Det kon neet===
+''Getjan keek zik de oongne oet,
+Was vuur de eerste keer
+In 'n dierntuin, vreug um 'n haverklap
+En wat is det vuur 'n deer.
+
+Nen aap, ne leeuwe en nen wolf,
+Nen olifant, nen bear,
+Nen buffel, zebra, krokodil,
+En nog zoovulle mear.
+
+Vuural de aepe vuen hee mooi,
+Mear det is neet zoo gek,
+Dee deers hebt ouwer 't algemeen
+An kiekers gin gebrek.
+
+Zo leup Getjan op zin gemak
+- Hee núm de tied dr vuur -
+Um alle deers good te bekiekng,
+Met Heendrek 'n dierntuin duur.
+
+Non ziej neet bliej Getjan dar iej
+Met miej zeent met egoan.
+Joa Heendrek, earlke woar, ik zin
+Heel bliej da'k 't heb edoan.
+
+Ze warn biej de giraffe kúmn,
+Wat zeg iej doar wal van,
+Is det non gin bezuender deer,
+Of veen iej dr niks an.
+
+Mear toen Getjan hier niks op zear,
+Vreug Heendrek 't nog eens wier,
+Veen iej ne neet heel mooi Getjan?
+Zeg Heendrek, huer es hier.
+
+'k Zin miskien neet zo heel geleard,
+Mear achterlek zin ik neet,
+Nee, doar maakt miej gin meanske wies
+Det er zo'n deer besteet.''
+
 
 ==Woark==
-*''Rozeknùpkes'' (1971)
+*''Roozeknúpkes'' (1971)
 
 {{DEFAULTSORT:Rozendom, Jan}}
 [[Kategorie:Tweants artikel]]
