*Empty MediaWiki Message*

--- a/Jan_Rozendom.mw
+++ b/Jan_Rozendom.mw
@@ -2,7 +2,7 @@
 
 Rozendom was nen [[gerefformeerd]]en. Hee skreef doarumme ook oawer eenvoold, te völle egenzinnigheaid, ondaankberheaid, wat blik oet gedichten as "A'j hoge stoat, kö'j lege valn", "''Viej weett t zo good''" en "''Staank vuur daank''". Doarnöast har he körte verhaalkes op riem.
 
-Rozendom har geveul vuur ritme. De meeste van ziene gedichten hebt een strak metrum van veer um dree jamben de regel. Hee skreef met [[Koarel van n Notoaris|Koarel]] zinne skriefwieze, al har hee den neet helemoal good oonder 't knee: In 1971 köm zinnen gedichtenbeundel ''Roozeknúpkes'' (Rozeknöpkes) oet, met et streepken op de ú de verkeerde kaante op.
+Rozendom har geveul vuur ritme. De meeste van ziene gedichten hebt een strak metrum van veer um dree jamben de regel. Hee skreef met [[Koarel van n Notoaris|Koarel]] zinne skriefwieze, al har hee den neet helemoal good oonder 't knee: In 1971 köm zinnen gedichtenbeundel ''Roozeknúpkes'' (Rozeknöpkes) oet, met et streepken op de ú de verkeerde kaante op, al was he doar wal konsekweant in.
 
 Doarbiej was'e nog vuurzitter van t Riessens Männenkoor en de Oold Strieders '40-'45 en deed hee vanoet de [[Protestantisme|Hervörmde Koarke]] völle vuur de gemeenskop in Riessen en [[Ealsn|Ealsen]].
 
