--- a/Jan_Rozendom.mw
+++ b/Jan_Rozendom.mw
@@ -1,4 +1,4 @@
-'''Jan Rozendom''' in [[Riessen]] bekeand as '''Jan van de Waander''' ([[1921]] - ), was nen [[Tweante|Tweantsen]] dichter, den't vake met zinne gedichtn in et domoalige Riessens Niejsblad steund. Hee skreef in t [[Riessens]], met vake nen stichteliken inhoold.
+'''Jan Rozendom''' in [[Riessen]] bekeand as '''Jan van de Waander''' ([[1921]] - ?), was nen [[Tweante|Tweantsen]] dichter, den't vake met zinne gedichtn in et domoalige Riessens Niejsblad steund. Hee skreef in t [[Riessens]], met vake nen stichteliken inhoold.
 
 Rozendom was nen [[gerefformeerd]]en. Hee skreef doarumme ook oawer eenvoold, te völle egenzinnigheaid, ondaankberheaid, wat blik oet gedichten as "A'j hoge stoat, kö'j lege valn", "''Viej weett t zo good''" en "''Staank vuur daank''". Doarnöast har he körte verhaalkes op riem.
 
