*Empty MediaWiki Message*

--- a/Iers.mw
+++ b/Iers.mw
@@ -1,17 +1,19 @@
 [[Ofbeelding:Cainteoirí Gaeilge - Irish Speakers.svg|thumb|400px|Sprekkers van t Iers per preveensie (Noord-Ierlaand erèknd as één preveensie)]]
-t '''Iers''' of '''Iers-Goals''' (Iers:''Gaeilge'') is ne [[Kelties]]e sproake den in [[Ierlaand (laand)|Ierlaand]] esprökn wördt. De sproake beheurt tot de [[Indo-Uropese taolen|Indo-Europese]] en Keltiese sproaknfemilies.
+'''Yrsk''' of '''yrsk-gallisk''' (yrsk: ''Gaeilge'') is ne [[Goideliske språken|keltiske språke]] wat in [[Ierlaand (laand)|Yrland]] en up [[Newfoundland]] in [[Kanada]] esprökken wördt. De språke heurt by de [[Indo-Uropese taolen|indo-europeeske]] en keltiske språkenfamilys.
 
-== Gebroek ==
-t Daagliks gebroek van t Iers geet hard achteroet, umdèt t [[Engels]] de leu mear meugelikheedn gef um t heuwd boawn water te hooldn. Alleene in de meest westerlike gebeedn in Ierlaand (de ''[[Gaeltacht]]'') wördt nog volop Iers eköjerd en ook doar is t de leste honderd joar slim vermeenderd. De Ierse regerege hef al eankele tientaln van joarn terugge t Iers in esteeld as offisjele laandssproake en t n verplicht vak op de middelbere skooln emaakt, mear den taktiek blik nit te woarkn, umdèt t ne slim moeilike sproake is um te learn, woerduur de jonge leu t mear as n straf zeet um öare oolde sproake te learn, as nen zeagn. De jeugd versteet t ook nit mear oaweral, en sprèkn nog meender.
-Stroat- en plaatsnaamns en woarskouwingsbordn wordt oaweral in twee sproakn wier egeewn. 
-Dr is n Iers [[tillevisie]]-stasjon, [[TG4]], wat alns in t Iers dut.
+== Gebruuk ==
+Et yrsk wördt vöärnamelik sprökken an de westküste van Yrland, in de sou nöömde ''gaeltacht'': gebeden wår as et noch de eyrste ümmegangsspråke is. In vroger tyden was dat gebeed vöäle grötter. Yrske olden keset vake lever vöär et [[engelsk]], ümdat dat volgens öär meyr möägelikheiden gevt in et leaven, al is dat sounöömde [[hibernoengelsk]] vake slim beinvloded döär et keltisk. Toch blikt uut undersöök dat et yrsk ne vöärname identiteitsgeaver is, al sprekket de lüde et in den alledag nauliks.
 
-== Verwaante sproakn ==
-t Iers is verwaant an alle aandere Keltiese sproakn:
+Et yrsk is de eyrste officiele språke van Yrland en müt in alle bestüürlike saken verteagenwoordigd weasen. Stråt- en plaatsnames sint altyd in twey språken en der is en yrsktalig televisystation: TG4. Ouk is et en verplicht vak up de skolen, al likt dat vöäral de andere kante uut te warken. Vöäle jungelüde vindet et ne fråi lastige språke. Ouk is et underwys vöärnamelik erichted up olde yrske mytology en literäre warken, in steade van up de dagelikse sprekkerye. Dårdöär seet vöäle jungelüde der et nüt neet van.
+
+Döär de yrsk-amerikaanske diaspora sint der vöäle amerikanen med yrske wörtel dee yrsk proberet te leyren. Med de kumst van internet en språkleyr-[[App|apps]] as DuoLingo en Memrise nemt internationale interesse in de språke to.
+
+== Verwante Språken ==
+Yrsk is verwant an de andere keltiske språken:
 
 * [[Schots-Gaols|Schots-Goals]] (oet [[Schotlaand]])
 * [[Kumries]] (oet [[Kumrië]] of ''Wales'')
-* [[Manx]] (de sproake van t [[eilaand]] [[Man (eilaand)|Man]], disse sproake is oet estörvn)
+* [[Manx]] (de sproake van t [[eilaand]] [[Man (eilaand)|Man]])
 * [[Kornies]] (oet [[Cornwall]], oet estörvn)
 * [[Bretonsk|Bretons]] (oet [[Bretanje]], [[Fraankriek]])
 
