*Empty MediaWiki Message*

--- a/Bert_Eeftink.mw
+++ b/Bert_Eeftink.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:BertEeftink.jpg|thumb|right|200px|Bert Eeftink]]
-'''Bert Eeftink''' (1967, Goor <ref>http://www.destentor.nl/regio/raalte/woede-van-helligen-hendrik-loopt-uit-de-hand-1.3506203</ref>) is een tekstskriever, grappenmaker, zanger en prissentaoter uut de [[Oaveriessel]]se stad [[Goor]]. Al verskeiden jaoren gef hi'j daor oldejaorsveurstellingen mit [[Paul Schabbink]] en [[Rob Vorkink]].<ref>[http://www.tctubantia.nl/regio/hengelo/2373937/Helligen-Hendrik-ergert-zich-meesterlijk.ece Recensie in De Twentsche Courant-Tubantia]</ref> 
+'''Bert Eeftink''' (28 februari 1967, Goor <ref>http://www.destentor.nl/regio/raalte/woede-van-helligen-hendrik-loopt-uit-de-hand-1.3506203</ref>) is een tekstskriever, grappenmaker, zanger en prissentaoter uut de [[Oaveriessel]]se stad [[Goor]]. Al verskeiden jaoren gef hi'j daor oldejaorsveurstellingen mit [[Paul Schabbink]] en [[Rob Vorkink]].<ref>[http://www.tctubantia.nl/regio/hengelo/2373937/Helligen-Hendrik-ergert-zich-meesterlijk.ece Recensie in De Twentsche Courant-Tubantia]</ref> 
 
 Mit toetsenist en zanger Schabbink, mit wel e sund 1997 samenwarkt, vörmt Eeftink 't luusterliedties-tweital [[Kerkstraat Centrum]]. An-evuld mit meer muzikaanten vörmt ze een theaterband die 'muzikaal cabaret' mak. Mit 't nummer 'Vier vrienden' wun Kerkstraat Centrum in 2002 op 't [[Streeksongfestival]] een broonzen medallie. In 't zölfde jaor kwaamp 't ''live''-album ''Levend op de planken'' uut.<ref>[http://kerkstraatcentrum.web-log.nl/ Web-log van Kerkstraat Centrum]</ref>
 
