Verwysing nå döärverwyssyde repareerd ([[Aksent]] nå [[Aksent (radioprogramma)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Bert_Eeftink.mw
+++ b/Bert_Eeftink.mw
@@ -1,9 +1,9 @@
-[[Ofbeelding:BertEeftink.jpg|thumb|right|200px|Bert Eeftink]]
+[[Ofbeelding:BertEeftink.jpg|thumb|200px|Bert Eeftink]]
 '''Bert Eeftink''' (28 februari 1967, Goor <ref>http://www.destentor.nl/regio/raalte/woede-van-helligen-hendrik-loopt-uit-de-hand-1.3506203</ref>) is een tekstskriever, grappenmaker, zanger en prissentaoter uut de [[Oaveriessel]]se stad [[Goor]]. Al verskeiden jaoren gef hi'j daor oldejaorsveurstellingen mit [[Paul Schabbink]] en [[Rob Vorkink]].<ref>[http://www.tctubantia.nl/regio/hengelo/2373937/Helligen-Hendrik-ergert-zich-meesterlijk.ece Recensie in De Twentsche Courant-Tubantia]</ref> 
 
 Mit toetsenist en zanger Schabbink, mit wel e sund 1997 samenwarkt, vörmt Eeftink 't luusterliedties-tweital [[Kerkstraat Centrum]]. An-evuld mit meer muzikaanten vörmt ze een theaterband die 'muzikaal cabaret' mak. Mit 't nummer 'Vier vrienden' wun Kerkstraat Centrum in 2002 op 't [[Streeksongfestival]] een broonzen medallie. In 't zölfde jaor kwaamp 't ''live''-album ''Levend op de planken'' uut.<ref>[http://kerkstraatcentrum.web-log.nl/ Web-log van Kerkstraat Centrum]</ref>
 
-In 2007 gruuiden Eeftink zien bekendheid mit zien typegien [[Helligen Hendrik]], op de previnciaole umroep [[RTV Oost|Radio Oost]] een vast onderdiel van 't pregramma oaver streektaal [[Aksent]]. As Helligen Hendrik gaf e zien oldejaorsshow van 2007, mit de titel 'mBâh!', in plaatsen deur hiel Oaveriessel. De uutvoering in theater De Reggehof in Goor wördden uutezunden deur TV Oost. Naost Eeftink, Schabbink en Vorkink speulden d'r ok [[Raymond Nijenhuis]] in mit. Mit Schabbink en Vorkink deu Eeftink in 2008 ok de tweide oldejaorsconference van Helligen Hendrik op riege, 'FÔI!'.
+In 2007 gruuiden Eeftink zien bekendheid mit zien typegien [[Helligen Hendrik]], op de previnciaole umroep [[RTV Oost|Radio Oost]] een vast onderdiel van 't pregramma oaver streektaal [[Aksent (radioprogramma)|Aksent]]. As Helligen Hendrik gaf e zien oldejaorsshow van 2007, mit de titel 'mBâh!', in plaatsen deur hiel Oaveriessel. De uutvoering in theater De Reggehof in Goor wördden uutezunden deur TV Oost. Naost Eeftink, Schabbink en Vorkink speulden d'r ok [[Raymond Nijenhuis]] in mit. Mit Schabbink en Vorkink deu Eeftink in 2008 ok de tweide oldejaorsconference van Helligen Hendrik op riege, 'FÔI!'.
 
 In de populaire Oaveriesselse zieperiege [[Van Jonge Leu en Oale Groond]] speult Eeftink dokter Luuk Nijland. Hi'j skrif zölf ok an de riege mit.<ref>[http://www.esnips.com/doc/96944624-2b97-4113-9650-76ac964e40da/Radio-Uitzending-7-6-06-RTVOOST Kuiervraogen mit Bert Eeftink (geluudsopnaome)]</ref> Wieder hef hi'j veur de [[Tweants|Twèentstalige]] versie van de [[Fabeltjeskrant]], sund september 2007 veur TV Oost, vertalings emeuken en stemmegies edaone.
 
@@ -17,12 +17,14 @@ Mit Kerkstraat Centrum:
 *[http://kerkstraatcentrum.web-log.nl/ Web-log van Kerkstraat Centrum]
 *[http://www.helligenhendrik.nl/ Helligen Hendrik zien webstee, mit in-espreuken stokkies]
 *[http://rtvoostfan.nl/2014/02/interview-met-bert-eeftink Interview met... Bert Eeftink (RTV Oost Fansite)]
+
 == Rifferenties ==
 <references />
 
 {{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
-[[Kategorie:Drèents artikel|Eeftink, Bert]]
-[[Kategorie:Nederlaands grapnmaker|Eeftink, Bert]]
-[[Kategorie:Nedersaksiese humor|Eeftink, Bert]]
-[[Kategorie:Tukker|Eeftink, Bert]]
+{{DEFAULTSORT:Eeftink, Bert}}
+[[Kategorie:Drèents artikel]]
+[[Kategorie:Nederlaands grapnmaker]]
+[[Kategorie:Nedersaksiese humor]]
+[[Kategorie:Tukker]]
