--- a/Blues.mw
+++ b/Blues.mw
@@ -1,4 +1,6 @@
 [[Bestaand:Bessie Smith (1936) by Carl Van Vechten.jpg|thumb|right|[[Bessie Smith]]]]
+[[File:Taj Mahal Trio MQ2007-a.jpg|thumb|350px|Taj Mahal Blues Trio]]
+
 '''Blues''' is n naam vuur ne vorm van [[muziek]] en [[muziekstiel]]<ref>Kunzler's Dictionary of Jazz gef twee definisies: '''Blues'''-nen van oorsproonk [[afro-amerikaans]]en muziekstiel (blz. 128), en de '''bluesvorm''', nen wiedverspreaiden vorm van muziek (blz. 131)</ref> wat oet [[Afrikaans-Amerikaans]]e gemeenskopn kömn, heuwdzakelik in t zuudn van de [[Verenigde Stoaten]]. t Is roond t eande van t [[19e eeuw|19de joarhoonderd]] ontstoan oet [[Spiritual (muziek)|spirituals]], [[woarkgezang]]n, [[veeldskreew]]n, [[kreenkzaank]] en [[chant]]s, en seempele verhaalkes op riem.<ref name="The Evolution of Differing Blues Styles">[http://how-to-play-blues-guitar.com/the-blues/the-evolution-of-different-blues-styles/How To Play Blues Guitar - The Evolution of Differing Blues Styles]. Bekekn op 2008-08-11</ref> n Bluesvorm is te veendn in oonder mear [[jazz]], [[rhythm and blues]] en [[rock and roll]]. t Besteet oet herkenboare akkoordnverleupe, woervan de [[12-moatn blues]] t bekeandst is. n Aander kenmoark zeent de [[blue nootn]]. Dee wordt vuur de oetdrukking van t geveul vake of evlakt of eböagn ezungn of espöld (mineur 3e noar majeur 3e) in verhoolding met de [[toon (muziek)|toon]] van de [[toonladder in majeur]]. 
 
 n Muziekstiel 'blues' is baseerd op de bluesvorm, mer hef ook aandere kenmoarkn, zo as kenmoarknde tekste, [[basgitaar|basmellodiejn]] en instrumeantn. Blues is te verdeeln in verskilnde oondersoortn, van [[country]] noar [[urban blues]]. Elke van de oonderverdelingn hebt in mear of meendere moate wal populear ewest bie t grote publiek in t [[20e eeuw|20ste joarhoonderd]]. t Bekeandst zeent de [[Piedmontblues|Piedmont-]], [[Deltablues|Delta-]], [[Jumpblues|Jump-]] en [[Chicagoblues]]. Vanof de [[Tweede Wereldoorlog|Tweede wearldoorlog]] gung t oawer op [[electric blues]] en wör de bluesmuziek oonder n breder (met name blaank) publiek geleefd. Vanof de joarn '60 ontsteund n tuskenvorm wat ze [[bluesrock]] neumdn.
