--- a/Rieksweg.mw
+++ b/Rieksweg.mw
@@ -85,7 +85,7 @@ Een '''Rieksweg''' is een weg die volgens et [[CBS]] in eigendom, beheer en in o
 |-
 | rieksweg 27 || 108.738
 |-
-| rieksweg 28 || 187.471
+| [[rieksweg 28]]|| 187.471
 |-
 | rieksweg 29 || 13.410
 |-
