*Empty MediaWiki Message*

--- a/Ansluting_Zwolle-Centrum.mw
+++ b/Ansluting_Zwolle-Centrum.mw
@@ -3,7 +3,7 @@ De '''ansluting Zwolle-Centrum''' is een [[ansluting]] in de [[Rieksweg 28|A28]]
 
 Tussen [[Ansluting Zwolle-Zuud|Zwolle-Zuud]] en lig een parrallelstructuur. Disse parrallelstructuur hold op bi'j Zwolle-Centrum en wieder naor [[Ansluting Zwolle-Noord|Zwolle-Noord]] he-j een [[plusstrook]], twie normale riejstroken en een [[weafstrook]] per richting. Tussen Zwolle-Centrum en Zwolle-Zuud he-j een 1+3+3+1-parrallelstructuur waorbi'j ien van de drie riejstroken een plusstrook is. Daornaost he-j ok nog een weafstrook op de parrallelbaan, waordeur er feitelik 2+3+3+2 riejstroken bint.
 
-In [[2004]] bint er plusstroken an elegd tussen Zwolle-Zuud en [[Ansluting Ommen (A28)|Ommen]]. In [[2010]] en [[2010|2011]] is de de A28 tussen [[Knooppunt Hattemerbroek]] en [[Ansluting Zwolle-Zuud|Zwolle-Zuud]] wieder emaakt nao 2x4 riejstroken. De plusstrook is hier deur etrökken töt de Iesselbrugge.
+In [[2004]] bint er plusstroken an elegd tussen Zwolle-Zuud en [[Ansluting Ommen (A28)|Ommen]]. Dit hef erveur ezörgd det de files die ontstunden bi'j de oprit van Zwolle-Centrum en op de [[Beatrixbrug]] richting noorden vot egaone bint. In [[2010]] en [[2010|2011]] is de de A28 tussen [[Knooppunt Hattemerbroek]] en [[Ansluting Zwolle-Zuud|Zwolle-Zuud]] wieder emaakt nao 2x4 riejstroken. De plusstrook is hier deur etrökken töt de Iesselbrugge.
 
 == Verkeersintensiteiten ==
 In [[2019]] reden er 118.700 voertugen tussen Zwolle-Zuud en Zwolle-Centrum en 119.800 tussen Zwolle-Centrum en Zwolle-Noord<ref>INWEVA 2019</ref>. In 2006 waren dit er nog 99.000 en 91.000<ref>INWEVA 2006</ref>.
