*Empty MediaWiki Message*

--- a/Rieksweg.mw
+++ b/Rieksweg.mw
@@ -1,5 +1,5 @@
 [[ofbeelding:Hectometerpaal A1 78k1-li met praatpaalwijzer.jpg|thumb|[[Hectometerpaole|Hectomeaterpööltien]] van [[Riekswäterstaot]]]]
-Een '''Rieksweg''' is een weg die volgens et [[CBS]] in eigendom, beheer en in onderhold bint bi'j [[Riekswäterstaot]]. In [[2017]] is de umschrieving van een rieksweg veraandert waordeur het antal kilometer rieksweg geliek is an het antal netwärkkilometers rieksweg. In de sprektääl wördt met [[snelweg]] väke een rieksweg bedoeld. Zie hoeft echter niet gelieke te wean umdät zowal N- als A- weagen rieksweagen kunt wean.
+Een '''rieksweg''' is een weg die volgens et [[CBS]] in eigendom, beheer en in onderhold bint bi'j [[Riekswäterstaot]]. In [[2017]] is de umschrieving van een rieksweg veraandert waordeur het antal kilometer rieksweg geliek is an het antal netwärkkilometers rieksweg. In de sprektääl wördt met [[snelweg]] väke een rieksweg bedoeld. Zie hoeft echter niet gelieke te wean umdät zowal N- als A- weagen rieksweagen kunt wean.
 
 {| class="wikitable floatright"
 ! jaar !! lengte 
@@ -41,119 +41,119 @@ Een '''Rieksweg''' is een weg die volgens et [[CBS]] in eigendom, beheer en in o
 | 2018 || 3.047&nbsp;km
 |}
 [[ofbeelding:Rijkswegenkaart.png|right|Rieksweagenkaort]]
-== Lengte Rieksweagen ==
+== Lengte rieksweagen ==
 {| class="wikitable"
 ! # !! lengte (meter)<ref>actuele wegenlijst december 2015 | rijkswaterstaat]</ref>
 |-
-| rieksweg 1 || 157.733
+| [[rieksweg 1]] || style="text-align:right" | 157.733
 |-
-| rieksweg 2 || 217.098
+| [[rieksweg 2]] || style="text-align:right" | 217.098
 |-
-| rieksweg 3 || 9.717
+| [[rieksweg 3]] || style="text-align:right" | 9.717
 |-
-| rieksweg 4 || 124.723
+| [[rieksweg 4]] || style="text-align:right" | 124.723
 |-
-| rieksweg 5 || 18.830
+| [[rieksweg 5]] || style="text-align:right" | 18.830
 |-
-| rieksweg 6 || 102.599
+| [[rieksweg 6]] || style="text-align:right" | 102.599
 |-
-| rieksweg 7 || 241.009
+| [[rieksweg 7]] || style="text-align:right" | 241.009
 |-
-| rieksweg 8 || 9.966
+| [[rieksweg 8]] || style="text-align:right" | 9.966
 |-
-| rieksweg 9 || 95.673
+| [[rieksweg 9]] || style="text-align:right" | 95.673
 |-
-| rieksweg 10 || 32.067
+| [[rieksweg 10]] || style="text-align:right" | 32.067
 |-
-| rieksweg 11 || 21.425
+| [[rieksweg 11]] || style="text-align:right" | 21.425
 |-
-| rieksweg 12 || 136.818
+| [[rieksweg 12]] || style="text-align:right" | 136.818
 |-
-| rieksweg 13 || 16.755
+| [[rieksweg 13]] || style="text-align:right" | 16.755
 |-
-| rieksweg 14 || 5.400
+| [[rieksweg 14]] || style="text-align:right" | 5.400
 |-
-| rieksweg 15 || 204.150
+| [[rieksweg 15]] || style="text-align:right" | 204.150
 |-
-| rieksweg 16 || 58.098
+| [[rieksweg 16]] || style="text-align:right" | 58.098
 |-
-| rieksweg 17 || 26.593
+| [[rieksweg 17]] || style="text-align:right" | 26.593
 |-
-| rieksweg 20 || 38.862
+| [[rieksweg 20]] || style="text-align:right" | 38.862
 |-
-| rieksweg 22 || 8.348
+| [[rieksweg 22]] || style="text-align:right" | 8.348
 |-
-| rieksweg 27 || 108.738
+| [[rieksweg 27]] || style="text-align:right" | 108.738
 |-
-| [[rieksweg 28]]|| 187.471
+| [[rieksweg 28]] || style="text-align:right" | 187.471
 |-
-| rieksweg 29 || 13.410
+| [[rieksweg 29]] || style="text-align:right" | 13.410
 |-
-| rieksweg 30 || 18.204
+| [[rieksweg 30]] || style="text-align:right" | 18.204
 |-
-| rieksweg 31 || 64.577
+| [[rieksweg 31]] || style="text-align:right" | 64.577
 |-
-| rieksweg 32 || 66.103
+| [[rieksweg 32]] || style="text-align:right" | 66.103
 |-
-| rieksweg 33 || 72.160
+| [[rieksweg 33]] || style="text-align:right" | 72.160
 |-
-| rieksweg 35 || 35.659
+| [[rieksweg 35]] || style="text-align:right" | 35.659
 |-
-| rieksweg 36 || 36.437
+| [[rieksweg 36]] || style="text-align:right" | 36.437
 |-
-| rieksweg 37 || 42.092
+| [[rieksweg 37]] || style="text-align:right" | 42.092
 |-
-| rieksweg 38 || 1.548
+| [[rieksweg 38]] || style="text-align:right" | 1.548
 |-
-| rieksweg 44 || 27.850
+| [[rieksweg 44]] || style="text-align:right" | 27.850
 |-
-| rieksweg 46 || 0.861
+| [[rieksweg 46]] || style="text-align:right" | 0.861
 |-
-| rieksweg 48 || 18.579
+| [[rieksweg 48]] || style="text-align:right" | 18.579
 |-
-| rieksweg 50 || 159.591
+| [[rieksweg 50]] || style="text-align:right" | 159.591
 |-
-| rieksweg 57 || 76.747
+| [[rieksweg 57]] || style="text-align:right" | 76.747
 |-
-| rieksweg 58 || 138.963
+| [[rieksweg 58]] || style="text-align:right" | 138.963
 |-
-| rieksweg 59 || 121.090
+| [[rieksweg 59]] || style="text-align:right" | 121.090
 |-
-| rieksweg 61 || 26.246
+| [[rieksweg 61]] || style="text-align:right" | 26.246
 |-
-| rieksweg 65 || 21.643
+| [[rieksweg 65]] || style="text-align:right" | 21.643
 |-
-| rieksweg 67 || 77.881
+| [[rieksweg 67]] || style="text-align:right" | 77.881
 |-
-| rieksweg 73 || 105.713
+| [[rieksweg 73]] || style="text-align:right" | 105.713
 |-
-| rieksweg 74 || 1.893
+| [[rieksweg 74]] || style="text-align:right" | 1.893
 |-
-| rieksweg 76 || 27.008
+| [[rieksweg 76]] || style="text-align:right" | 27.008
 |-
-| rieksweg 77 || 10.135
+| [[rieksweg 77]] || style="text-align:right" | 10.135
 |-
-| rieksweg 79 || 17.331
+| [[rieksweg 79]] || style="text-align:right" | 17.331
 |-
-| rieksweg 99 || 19.062
+| [[rieksweg 99]] || style="text-align:right" | 19.062
 |-
-| planvervangende rieksweg 200 || 11.866
+| [[planvervangende rieksweg 200]] || style="text-align:right" | 11.866
 |-
-| planvervangende rieksweg 205 || 0.882
+| [[planvervangende rieksweg 205]] || style="text-align:right" | 0.882
 |-
-| planvervangende rieksweg 708 || 1.522
+| [[planvervangende rieksweg 708]] || style="text-align:right" | 1.522
 |-
-| planvervangende rieksweg 783 || 1.506
+| [[planvervangende rieksweg 783]] || style="text-align:right" | 1.506
 |-
-| planvervangende rieksweg 835 || 35.840
+| [[planvervangende rieksweg 835]] || style="text-align:right" | 35.840
 |-
-| planvervangende rieksweg 838 || 3.971
+| [[planvervangende rieksweg 838]] || style="text-align:right" | 3.971
 |-
-| planvervangende rieksweg 915 || 4.002
+| [[planvervangende rieksweg 915]] || style="text-align:right" | 4.002
 |}
 
 == Verwiezings ==
-Veur de informatie op disse pagina is gebruuk gemaakt van wegenwiki.nl
+Veur de informatie op disse pagina is gebruuk gemaakt van wegenwiki.nl.
 <references/>
 
 {{Dialekt|sdz}}
