*Empty MediaWiki Message*

--- a/Rieksweg_28.mw
+++ b/Rieksweg_28.mw
@@ -7,7 +7,7 @@ De A28 is oaver het algemien een noord-zuud-route, määr is ook belangrieke veu
 == Geschiedenisse ==
 In 1996 is een [[spitsstrook]] lös edaone tussen [[Ansluuting Den Dolder|Den Dolder]] en [[Ansluuting De Uithof|De Uithof]] in de richting van [[Utrecht (stad)|Utrecht]]. Dit was ien van de eersten in Nederlaand. In [[2012]] is disse spitsstrook vot edaone toen as de A28 tussen [[Amersfoort]] en Utrecht wieder wier emääkt. Al jaoren lank was de A28 tussen Utrecht en Amersfoort [[file]] gevuulig met een hiele boel verkeer op määr twie riejstroken per richting. Um de situaotie better te mäken is beslötten um de A28 wieder te mäken nao drie riejstroken per richting tussen [[Knooppunt Rijnsweerd]] en [[Ansluuting Maarn|Maarn]]. Daornaost bint er bi'j Amersfoort spits- en [[Weafstrook|weafstroken]] neer elegd. In 2012 en [[2013]] bint alle riejstroken lös edaone. De [[filedrok]] is hier flink of enömmen. Allenig is et stuk tussen [[Ansluuting De Uithof|De Uithof]] en [[Knooppunt Rijnsweerd]] (veur de [[Rieksweg 27|A27]]) is nog een knelpunt.
 
-Al jaorenlange was de A28 bi'j Zwolle oaverbelast en gedieltes bi'j Zwolle stunden in de [[Filetop 50]]. De oaverbelaste gedieltes waren s'märrens de opritten vanof Ni'jluzen en Ommen richting et zuden. s'Aovends was veural de oprit van Zwolle-Centrum richting et noorden et prebleem. Ok de [[Beatrixbrug]] had problemen met de ofwikkeling van verkeer. In [[2002]] en [[2003]] bint weafstroken op de [[Vechtbrugge (Zwolle)|Vechtbrugge]] epläätst. Hierveur is de Vechtbrugge in [[2000]] en [[2001]] verbreed wat veural in de twiede helfte van 2001 veur slimme vertragings zörgden. In [[november 2001]] was de verbreding van de brugge of. In 2004 bint [[Plustrook|plustroken]] neer elegd tussen [[Ansluting Zwolle-Zuud|Zwolle-Zuud]] en [[Ommen (ofslag)|Ommen]] wat er veur ezörgt hef det et knelpunt in Zwolle nao de [[Iesselbrugge]] en bi'j Ommen verplaatst is. In [[2010]] en [[2011]] is de A28 tussen [[Knooppunt Hattemerbroek]] en [[Ansluuting Zwolle-Zuud|Zwolle-Zuud]] van 2x2+weafstrook nao 2x4 wieder emääkt. Daorbi'j is de plusstrook bi'j Zwolle-Zuud langer emääkt töt an de Iesselbrugge. Tussen Ommen en [[Knooppunt Lankhorst]] is de A28 van 2x2 nao 2x3 riejstroken verbreed. Dit hef ervoor ezörgt det de dagelikse files in s'märrens bi'j [[Stappest]] en [[Ansluuting Ni'jluzen|Ni'jluzen]] en s'aovends bi'j de Iesselbrugge en Ommen vot egaone bint. Deur et wieder mäken van de A28 bi'j Zwolle is de snelweg hier uut de Filetop 50 egaon en is de [[filedrok]] flink verminderd. 
+Al jaorenlange was de A28 bi'j Zwolle oaverbelast en gedieltes bi'j Zwolle stunden in de [[Filetop 50]].<ref>Filetop 50 oaver de jaoren veur 2004</ref> De oaverbelaste gedieltes waren s'märrens de opritten vanof Ni'jluzen en Ommen richting et zuden. s'Aovends was veural de oprit van Zwolle-Centrum richting et noorden et prebleem.<ref>[http://publicaties.minienm.nl/documenten/voorverkenning-a28-hattemerbroek-lankhorst-proefproject-innovati Veurverkenning A28 Hattemerbroek-Lankhorst Proefproject innovatieve benuttingen]</ref><ref>[http://publicaties.minienm.nl/documenten/verkenning-a28-zwolle-meppel Verkenning A28 Zwolle-Meppel]</ref> Ok de [[Beatrixbrug]] had problemen met de ofwikkeling van verkeer. In [[2002]] en [[2003]] bint weafstroken op de [[Vechtbrugge (Zwolle)|Vechtbrugge]] epläätst. Hierveur is de Vechtbrugge in [[2000]] en [[2001]] verbreed wat veural in de twiede helfte van 2001 veur slimme vertragings zörgden.<ref>Riekswäterstaot online filegegevens</ref> In [[november 2001]] was de verbreding van de brugge of. In 2004 bint [[Plustrook|plustroken]] neer elegd tussen [[Ansluting Zwolle-Zuud|Zwolle-Zuud]] en [[Ommen (ofslag)|Ommen]] wat er veur ezörgt hef det et knelpunt in Zwolle nao de [[Iesselbrugge]] en bi'j Ommen verplaatst is. In [[2010]] en [[2011]] is de A28 tussen [[Knooppunt Hattemerbroek]] en [[Ansluuting Zwolle-Zuud|Zwolle-Zuud]] van 2x2+weafstrook nao 2x4 wieder emääkt. Daorbi'j is de plusstrook bi'j Zwolle-Zuud langer emääkt töt an de Iesselbrugge. Tussen Ommen en [[Knooppunt Lankhorst]] is de A28 van 2x2 nao 2x3 riejstroken verbreed. Dit hef ervoor ezörgt det de dagelikse files in s'märrens bi'j [[Stappest]] en [[Ansluuting Ni'jluzen|Ni'jluzen]] en s'aovends bi'j de Iesselbrugge en Ommen vot egaone bint. Deur et wieder mäken van de A28 bi'j Zwolle is de snelweg hier uut de Filetop 50 egaon en is de [[filedrok]] flink verminderd. 
 
 In [[2009]] is [[Knooppunt Lankhorst]] compleet emääkt. Vrogger ha-j hier allenig een splitsing, sunds 2009 ku-j hier ok van Meppelt nao Hoogeveane en andersumme. Vrogger mos et verkeer van disse richtings bi'j [[Ansluuting De Wiek|De Wiek]] en [[Ansluting Meppel|Meppel]] ([[A32]]) van de snelweg of.
 
