--- a/Rieksweg_28.mw
+++ b/Rieksweg_28.mw
@@ -270,7 +270,7 @@ Het giet hier oaver wärkdag-jaorgemiddeldes, dus het verkeer dät op een gemidd
 |}
 
 == [[Filetop 50]] ==
-Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stunden tussen [[1996]] en [[2006]]<ref>1996 Weg Omschrijving Richting Filezwaarte https://docplayer.nl/56920151-1996-weg-omschrijving-richting-filezwaarte.html</ref>. De ciefers bint niet corrigeerd veur veraanderde meetmenieren. Zie bint dus niet ien op ien vergeliekbaor. In [[1998]], [[2000]], [[2002]], [[2004]], [[2005]] en [[2006]] bint er meetbreuken ewest. Op [[1 juli]] [[2005]] hef er een slim grote meetbreuk ewest waordeur de [[filedrok]] 25% heuger uutkwamp. Hierdeur wier er een grotere ofstaand töt de kop van de [[file]] emeaten. Ook hebt niet alle wegvakken nog etzölfde wegnommer. Veur de ofzunderlike jaorlikse filetoppen is hierveur corrigeerd, maar dus niet oaver de jaoren hen. Ook de ciefers van de eerste helfte van [[2009]] en [[2012]]-[[2019]] ku-j hier zien.
+Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stunden tussen [[1996]] en [[2006]]<ref>1996 Weg Omschrijving Richting Filezwaarte https://docplayer.nl/56920151-1996-weg-omschrijving-richting-filezwaarte.html</ref>. De ciefers bint niet corrigeerd veur veraanderde meetmenieren. Zie bint dus niet ien op ien vergeliekbaor. Deur andere meetmenieren bint niet alle heufdlocaties meer op dezölfde plaatse. Zo kan beveurbield Zwolle-Zuud->Iesselbrugge later as Zwolle-Zuud->Hattemerbroek vermeld wörden. In [[1998]], [[2000]], [[2002]], [[2004]], [[2005]] en [[2006]] bint er meetbreuken ewest. Op [[1 juli]] [[2005]] hef er een slim grote meetbreuk ewest waordeur de [[filedrok]] 25% heuger uutkwamp. Hierdeur wier er een grotere ofstaand töt de kop van de [[file]] emeaten. Ook hebt niet alle wegvakken nog etzölfde wegnommer. Veur de ofzunderlike jaorlikse filetoppen is hierveur corrigeerd, maar dus niet oaver de jaoren hen. Ook de ciefers van de eerste helfte van [[2009]] en [[2012]]-[[2019]] ku-j hier zien.
 {| class="wikitable"
 |+
 !1996
@@ -347,7 +347,7 @@ Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stu
 |20
 |63514
 |-
-|Zwolle-Noord->Brugge oaver de Oaveriesselse Vechte (Ommen)
+|Zwolle-Noord->Brugge oaver de Oaveriesselse Vechte (Ommen)<ref>Wördt deur NIS Riekswäterstaot filegegevens ok ezeen as Zwolle-Centrum->Zwolle-Noord. Dit giet oaver de jaoren töt 2003.</ref>
 |25
 |57697
 |
